fix the height on left side of the app (on tablet version) with media-query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -488,6 +488,10 @@ img
         }
 
     }
+    .all_enemy_are_the_same
+    {
+        height: calc(100% - 70px);
+    }
 }
 
 @media screen and (max-width:540px)
